Fix CSS spacing on user page

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -86,6 +86,10 @@ th {
 
 }
 
+#station-holder {
+  padding-top: 6%;
+}
+
 #station-selector {
   background-color: #FFF;
   border-radius: 10px;
@@ -94,7 +98,7 @@ th {
   box-shadow: inset 0 1px 2px #CACACE;
 }
 
-#station {
+.station {
   margin: 0 auto;
   height: 4em;
   width: 40%;
